fix: change the muscle hitboxes into invisible

--- a/src/styles/sass/4-pages/_e-trener.scss
+++ b/src/styles/sass/4-pages/_e-trener.scss
@@ -73,7 +73,7 @@ $max-content: max-content;
         background: rgb(random(255), random(255), random(255));
         border: none;
         opacity: 0.6;
-        // background: transparent;
+        background: transparent;
       }
       &--barki-tyl {
         @include btn-uniwersalne-ustawienia();
